--- a/TactileDrawingTool/packages.config
+++ b/TactileDrawingTool/packages.config
@@ -5,7 +5,7 @@
   <package id="ImageLibrary" version="3.0.2" targetFramework="net472" />
   <package id="ImageResizer" version="4.2.5" targetFramework="net472" />
   <package id="Magick.NET-Q8-x64" version="7.15.0" targetFramework="net472" />
-  <package id="Vintasoft.Imaging" version="9.0.0.7" targetFramework="net472" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
   <package id="Vintasoft.Shared" version="1.4.0.1" targetFramework="net472" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net472" />
 </packages>
